# experiments

./: temp.go
c/advanced_c_tut/: anonymous_struct_n_array.c  bit_flags.c  const.c  error_handling.c  function_pointer.c  generics.c  getline.c  lookup_tables.c  macro_stringify_and_tokenize.c  printf.c  regex.c  static.c  types.c  variable_length_array.c
c/buf/: main  main.c
c/kilo/: main  main.c  makefile  printer.c  printer.h  printer.h.gch
c/libraries/: libstr.c  libstr.h  libstr.h.gch  libtest  libtest.c  makefile  readme.md  runtime_libtest
c/networking/: temp  temp.c
c/networking/v1/: Makefile  (+1 more)
c/processes/: Makefile  main  main.c
c/random/: Makefile  feature_test_macros.c  memory.c  pointers.c  shared_memory.c  temp.c  threads.c  usagetest.c  var_args  var_args.c
c/socket/: Makefile  main.c
cpp/: 1652_Defuse_the_Bomb.cpp  2064_Minimized_Maximum_of_Products_Distributed_to_Any_Store  2064_Minimized_Maximum_of_Products_Distributed_to_Any_Store.cpp  2563_Count_the_Number_of_Fair_Pairs  2563_Count_the_Number_of_Fair_Pairs.cpp  2684_maximum_num_of_moves_in_grid  2684_maximum_num_of_moves_in_grid.cpp  49_group_anagrams.cpp  input.txt  io.cpp  main.cpp  map  map.cpp  maximum_subarray_sum.cpp  min_stack.cpp  monk_and_class_marks.cpp  next_greater_ele.cpp  pascal_triangle.cpp  set-matrix-zeroes.cpp  test  test.cpp  top_k_elements_in_list.cpp
cpp/array/: kadane.cpp
cpp/dp/: 494_target_sum.cpp  target_sum
cpp/recursion/: main  print_binary_numbers_with_prefix_greater.cpp
cpp/virtual_function/: Makefile  cpp_demo.h  main.cpp  virtual_function.cpp
go/btree/: main.go
go/cli/: go.mod  main.go
go/db_conn/: go.mod  main.go
go/go-api-mux/: .Makefile.swp  .env  Makefile  docker-compose.yml  go.mod  go.sum
go/go-exps/: go.mod
go/http_server/: go.mod  main.go
go/io/: files.go  go.mod  main.go
go/mapstructure/: go.mod  main.go  setting.json
go/mix-topics/: TCPServer.go  WaitGroups.go  channels.go  mutex.go  oncce.go  signal.go  threadPool.go  types.go
go/scheduler-tracing/: listing1  listing1.go  readme.md
go/tcp-client/: readme.txt  tcp-client.go
go/tcp-http/: client.go  go.mod  server.go
go/tcp-server/: tcp-server.go
go/tempp/: Task.go  client.go  go.mod  main.go  tasks.json
go/testing/: Makefile  go.mod
go/todo-gin/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
js/vanilla/: main.js  objectCompare.js
python/django-demo/: db.sqlite3  pyproject.toml
python/flask-demo/: pyproject.toml
python/flask-demo-2/: middleware.ini  pyproject.toml
python/flask-demo-2/flask_demo_2/: app.py
python/flask-demo/flask_demo/: app.py
python/flask-demo/middleware_apm.egg-info/: PKG-INFO
python/generate_traces/: pyproject.toml
python/generate_traces/generate_traces/: test_otel.py
python/my_api_project/: middleware.ini  pyproject.toml  start.py
python/my_api_project/my_api_project/: main.py
rabbitmq/go/: docker-compose.yaml  go.mod  producer.go  readme.md
rabbitmq/hns/: consumer.js  package.json
rabbitmq/js/: package-lock.json  publisher.js
shell/: test.sh
(+78 files in other folders)
