[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Hardik Choksi <hardik.choksi@middleware.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


backoff = "2.2.1"
certifi = "2024.6.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
deprecated = "1.2.14"
distro = "1.9.0"
googleapis-common-protos = "1.63.1"
grpcio = "1.64.1"
idna = "3.7"
opentelemetry-api = "1.15.0"
opentelemetry-distro = "0.36b0"
opentelemetry-exporter-otlp-proto-grpc = "1.15.0"
opentelemetry-instrumentation = "0.36b0"
opentelemetry-instrumentation-django = "0.36b0"
opentelemetry-instrumentation-flask = "0.36b0"
opentelemetry-instrumentation-wsgi = "0.36b0"
opentelemetry-propagator-aws-xray = "1.0.1"
opentelemetry-propagator-b3 = "1.20.0"
opentelemetry-propagator-gcp = "1.6.0"
opentelemetry-propagator-jaeger = "1.20.0"
opentelemetry-propagator-ot-trace = "0.41b0"
opentelemetry-proto = "1.15.0"
opentelemetry-sdk = "1.15.0"
opentelemetry-semantic-conventions = "0.36b0"
opentelemetry-util-http = "0.36b0"
protobuf = "4.25.3"
psutil = "5.9.5"
pycparser = "2.22"
pyroscope-io = "0.8.5"
pyyaml = "6.0.1"
requests = "2.31.0"
six = "1.16.0"
thrift = "0.16.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
wrapt = "1.16.0"
middleware-apm = {path = "/home/hardik/Projects/agent-apm-python", develop = true}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flask-api = "flask_demo.app:main"
