[tool.poetry]
name = "my-api-project"
version = "0.1.0"
description = ""
authors = ["Hardik Choksi <hardik.choksi@middleware.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
langchain-groq = "^0.0.1"

opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation = "^0.46b0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "start:main"
